Footer Styling. Fixed body spacing to fit Header

--- a/style.css
+++ b/style.css
@@ -15,7 +15,11 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
-nav {
+body{
+    padding-top: 125px;
+}
+
+nav, .main-footer, .copy {
     background-color: #9A899A;
 }
 
